# duployan-font

./: .gitignore  .travis.yml  LICENSE  Makefile  README.md  constraints.txt  dev-constraints.txt  dev-requirements.in  dev-requirements.txt  get-old-requirements.py  pyproject.toml  requirements-to-freeze.txt  requirements.in  requirements.txt
.github/workflows/: main.yml  test.yml
docs/: README.md  developer-documentation.md  user-documentation.md  variants.md  width-system.md
font/: Duployan-Regular.fea  Duployan-Regular.sfd  Duployan.fea  Duployan.sfd  build.py  duployan.py  fonttools_patches.py  split_functions.py
notes/: el-Dupl.md  en-Dupl-x-abc.md  en-Dupl-x-acme.md  en-Dupl-x-ellis.md  en-Dupl-x-every.md  en-Dupl-x-lockett1.md  en-Dupl-x-lockett2.md  en-Dupl-x-madeeasy.md  en-Dupl-x-newameri.md  en-Dupl-x-paragon.md  en-Dupl-x-pernin.md  en-Dupl-x-perrault.md  en-Dupl-x-reporter.md  en-Dupl-x-sloan.md  en-pernin.md  eo-Dupl.md  es-Dupl-x-ameghino.md  es-Dupl-x-champour.md  es-Dupl.md  fr-Dupl-x-codifie.md  fr-Dupl-x-duploye.md  fr-Dupl-x-perrault.md  nl-Dupl.md  ota-Dupl.md  ro-Dupl.md  ru-Dupl.md  tr-Dupl.md  und-Dupl-x-pipa.md  zh-Dupl.md
sources/: Duployan.fea  anchors.py  build.py  charset.py  charsets.py  copy_metrics.py  duployan.py  fonttools_patches.py  metadata.fea  otf2ttf.py  schema.py  shapes.py  sifting.py  utils.py
sources/charsets/: __init__.py  data.py
sources/phases/: __init__.py  main.py  marker.py  middle.py
tests/: altuni.test  antichiral-sequences.test  circles.test  cochiral-sequences.test  cognates.test  decomposition.test  default-ignorable.test  diacritics.test  dot.test  dotted-circles.test  double-mark.test  dtls.test  fontbakery-config.toml  fontspector-config.toml  fractions.test  hooks.test  ijam.test  ligatures.test  long-i.test  numbers.test  orienting-sequences.test  ou.test  ovals.test  overlaps.test  overlong.test  pseudo-cursive.test  quarter-circles.test  reversed-circle-kludge.test  romanian-u.test  run-tests.py  secant-angles.test  secants.test  semicircles.test  separate-affixes.test  steps.test  subantiparallel.test  subset.subset-test  test.test  wa.test  wi.test  (+1 more)
typings/fontTools/: agl.pyi
typings/fontTools/cffLib/: __init__.pyi
typings/fontTools/feaLib/: ast.pyi  builder.pyi
typings/fontTools/merge/: unicode.pyi
typings/fontTools/misc/: psCharStrings.pyi  timeTools.pyi
typings/fontTools/subset/: __init__.pyi
typings/fontTools/ttLib/: ttFont.pyi
typings/fontTools/ttLib/tables/: C_F_F_.pyi  DefaultTable.pyi  O_S_2f_2.pyi  _h_e_a_d.pyi  _h_h_e_a.pyi  _m_e_t_a.pyi  _n_a_m_e.pyi  _p_o_s_t.pyi
typings/fontforge/: __init__.pyi
typings/gfsubsets/: __init__.pyi
typings/uharfbuzz/: __init__.pyi
