# Copyright 2022-2024 David Corbett
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[project]
requires-python = ">= 3.11"

[tool.mypy]
enable_error_code = [
    "explicit-override",
    "ignore-without-code",
    "redundant-expr",
    "redundant-self",
    "truthy-bool",
    "truthy-iterable",
    "unused-awaitable",
]
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_reexport = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "cffsubr.*",
    "fontTools.*",
    "fontforge.*",
    "uharfbuzz.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "fontforge.*",
]
follow_imports = "skip"

[[tool.mypy.overrides]]
module = [
    "otf2ttf",
]
disallow_untyped_defs = false

[tool.pip-tools]
allow-unsafe = true
emit-index-url = false
emit-trusted-host = false
quiet = true
strip-extras = true
upgrade = true

[tool.ruff]
src = [".", "sources"]

[tool.ruff.lint]
allowed-confusables = [
    # https://github.com/astral-sh/ruff/issues/3977
    "’",
]
exclude = [
    "sources/otf2ttf.py",
]
ignore = [
    # Not appropriate for this project
    "B011",
    "D200",
    "EM",
    "FIX001",
    "FIX002",
    "FIX004",
    "FURB154",
    "PLR2004",
    "PLR5501",
    "PT",
    "PTH",
    "RET505",
    "RUF021",
    "S101",
    "S404",
    "S603",
    "S607",
    "SIM105",
    "SIM108",
    "SIM300",
    "TD001",
    "TD002",
    "TD003",
    "TRY003",
    # Too many false positives
    "ARG001",
    "ARG002",
    "COM812",
    "D205",
    "N802",
    "PLW2901",  # https://github.com/astral-sh/ruff/issues/7273
    "S310",  # https://github.com/astral-sh/ruff/issues/12245
    "SLF001",  # https://github.com/astral-sh/ruff/issues/9022
    "TRY004",  # https://github.com/astral-sh/ruff/issues/12287
    # Too many true positives
    "C901",
    "D1",
    "FBT",
    "PLR09",
    "PLR1702",
]
preview = true
select = ["ALL"]

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = [
    "exit",
    "input",
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"
multiline-quotes = "single"

[tool.ruff.lint.flake8-type-checking]
strict = true

[tool.ruff.lint.isort]
case-sensitive = true
force-single-line = true
force-sort-within-sections = true
known-third-party = ["fontforge"]
lines-after-imports = 2
no-lines-before = ["first-party"]
order-by-type = false
section-order = ["future", "standard-library", "third-party", "local-folder", "first-party"]

[tool.ruff.lint.per-file-ignores]
"sources/charset.py" = [
    # Shape definitions are more maintainable one per line.
    "E501",
]
"sources/shapes.py" = [
    # Shape classes are designed for inheritance. Even if a certain
    # method doesn’t use `self`, an override of it might.
    "PLR6301",
]
"tests/run-tests.py" = [
    # Test results must be output.
    "T20",
]

[tool.ruff.lint.pycodestyle]
max-line-length = 189

[tool.ruff.lint.pydocstyle]
convention = "google"
